Linux/oj-project/src/temp_files/tmp_1599633743.1.compile_error
./temp_files/tmp_1599633743.1.cpp: In function ‘void Test1(const Solution&)’:
./temp_files/tmp_1599633743.1.cpp:13:34: error: passing ‘const Solution’ as ‘this’ argument discards qualifiers [-fpermissive]
     bool ret = s.isPalindrome(121);
                                  ^
./temp_files/tmp_1599633743.1.cpp:8:10: note:   in call to ‘bool Solution::isPalindrome(int)’
     bool isPalindrome(int x){
          ^~~~~~~~~~~~
./temp_files/tmp_1599633743.1.cpp: In function ‘void Test2(const Solution&)’:
./temp_files/tmp_1599633743.1.cpp:23:35: error: passing ‘const Solution’ as ‘this’ argument discards qualifiers [-fpermissive]
     bool ret = s.isPalindrome(-121);
                                   ^
./temp_files/tmp_1599633743.1.cpp:8:10: note:   in call to ‘bool Solution::isPalindrome(int)’
     bool isPalindrome(int x){
          ^~~~~~~~~~~~
./temp_files/tmp_1599633743.1.cpp: In function ‘void Test3(const Solution&)’:
./temp_files/tmp_1599633743.1.cpp:33:33: error: passing ‘const Solution’ as ‘this’ argument discards qualifiers [-fpermissive]
     bool ret = s.isPalindrome(10);
                                 ^
./temp_files/tmp_1599633743.1.cpp:8:10: note:   in call to ‘bool Solution::isPalindrome(int)’
     bool isPalindrome(int x){
          ^~~~~~~~~~~~
